--- a/keil/Objects/empty_LP_MSPM0G3507_nortos_keil.build_log.htm
+++ b/keil/Objects/empty_LP_MSPM0G3507_nortos_keil.build_log.htm
@@ -21,13 +21,13 @@ Target DLL:      CMSIS_AGDI.dll V1.33.21.0
 Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
-D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR_1\keil\empty_LP_MSPM0G3507_nortos_keil.uvprojx
-Project File Date:  04/19/2025
+D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR\keil\empty_LP_MSPM0G3507_nortos_keil.uvprojx
+Project File Date:  04/22/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.22', folder: 'D:\Application\Work\Keil5\ARM\ARMCLANG\Bin'
 Build target 'MSPM0G3507_Project'
-Before Build - User command #1: cmd.exe /C "D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR_1\keil\../../tools/keil/syscfg.bat 'D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR_1\keil\' empty.syscfg"
+Before Build - User command #1: cmd.exe /C "D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR\keil\../../tools/keil/syscfg.bat 'D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR\keil\' empty.syscfg"
 Using Sysconfig Tool from "D:\Application\Work\Ti\TI_SYSCONFIG\sysconfig_cli.bat"
 "Update the file located at <sdk path>/tools/keil/syscfg.bat to use a different version"
 Running script...
@@ -35,13 +35,12 @@ Validating...
 info: PWM(/ti/driverlib/PWM): Peripheral does not retain register contents in STOP or STANDBY modes. User should take care to save and restore register configuration in application. See Retention Configuration section for more details.
 info: TIMER_0(/ti/driverlib/TIMER): Peripheral does not retain register contents in STOP or STANDBY modes. User should take care to save and restore register configuration in application. See Retention Configuration section for more details.
 Generating Code (empty.syscfg)...
-Unchanged D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR_1\ti_msp_dl_config.c...
-Unchanged D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR_1\ti_msp_dl_config.h...
-Unchanged D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR_1\Event.dot...
+Unchanged D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR\ti_msp_dl_config.c...
+Unchanged D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR\ti_msp_dl_config.h...
+Unchanged D:\Application\Work\Ti\M0_SDK\mspm0_sdk_2_03_00_07\2024H_TI_CAR\Event.dot...
 compiling empty.c...
-compiling pid.c...
 linking...
-Program Size: Code=8544 RO-data=360 RW-data=40 ZI-data=5872  
+Program Size: Code=9424 RO-data=360 RW-data=40 ZI-data=5872  
 FromELF: creating hex file...
 ".\Objects\empty_LP_MSPM0G3507_nortos_keil.axf" - 0 Error(s), 0 Warning(s).
 
@@ -55,7 +54,7 @@ Package Vendor: TexasInstruments
 <h2>Collection of Component include folders:</h2>
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
